# data_processing_pipeline

./: .gitignore  README.md  pyproject.toml
Examples/sample/: my_fitted_pipeline.joblib  sample.py
Examples/simple/: sample.py
src/: __init__.py
src/DSPipeline/: __init__.py  data_processes.py  data_schema.py  utils.py
src/DataProcessingPipeline/: data_pipeline.py  data_schema.py
src/dataprocessing/: __init__.py  data_pipeline.py  data_schema.py  utils.py
src/dataprocessingpipeline/: __init__.py
tests/: test_data_schema.py
